Fix: don't copy skel BUILD file to final package
Change-Id: I743d7d6340c5a7e8e3a7e724837651b4d2444f7e

--- a/omd/packages/stunnel/BUILD.stunnel.bazel
+++ b/omd/packages/stunnel/BUILD.stunnel.bazel
@@ -52,8 +52,7 @@ configure_make(
 genrule(
     name = "skel",
     srcs = [
-        "@omd_packages//omd/packages/stunnel/skel",
-        "@omd_packages//omd/packages/stunnel/skel:skel_root",
+        "@omd_packages//omd/packages/stunnel:skel",
     ],
     outs = [
         "skel/etc/init.d/stunnel",
@@ -63,6 +62,6 @@ genrule(
         "skel/etc/stunnel/conf.d",
     ],
     cmd = """
-        cp -r --dereference $$(dirname $(execpath @omd_packages//omd/packages/stunnel/skel:skel_root)) $$(realpath $(RULEDIR))
+        cp -r --dereference $(execpath @omd_packages//omd/packages/stunnel:skel) $$(realpath $(RULEDIR))
     """,
 )
