--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,15 +126,16 @@ module = [
     "cmk.gui.background_job",
     "cmk.gui.backup",
     "cmk.gui.mobile.views",
+    "cmk.gui.plugins.wato.bi_config",
+    "cmk.gui.plugins.wato.utils.main_menu",
     "cmk.gui.views.layout",
-    "cmk.gui.wato.pages.parentscan",
-    "cmk.gui.wato.pages.bulk_edit",
     "cmk.gui.wato.pages.bulk_discovery",
+    "cmk.gui.wato.pages.bulk_edit",
     "cmk.gui.wato.pages.folders",
+    "cmk.gui.wato.pages.parentscan",
     "cmk.gui.watolib.bulk_discovery",
     "cmk.gui.watolib.main_menu",
     "cmk.gui.watolib.network_scan",
-    "cmk.gui.plugins.wato.utils.main_menu",
     "cmk.notification_plugins.*",
     "cmk.update_config.*",
     "cmk.utils.crypto.*",
