--- a/mypy-raw.ini
+++ b/mypy-raw.ini
@@ -30,7 +30,7 @@ init_typed = true
 warn_required_dynamic_aliases = true
 warn_untyped_fields = true
 
-[mypy-cmk.gui.background_job,cmk.gui.backup,cmk.utils.crypto.*,cmk.gui.plugins.views.mobile,cmk.gui.views.layout,cmk.notification_plugins.*,cmk.update_config.*,tests.gui_e2e.*,tests.testlib.*,tests.unit.cmk.ec.*,tests.unit.cmk.update_config.*]
+[mypy-cmk.gui.background_job,cmk.gui.backup,cmk.gui.mobile.views,cmk.gui.plugins.wato.bi_config,cmk.gui.plugins.wato.utils.main_menu,cmk.gui.views.layout,cmk.gui.wato.pages.bulk_discovery,cmk.gui.wato.pages.bulk_edit,cmk.gui.wato.pages.folders,cmk.gui.wato.pages.parentscan,cmk.gui.watolib.bulk_discovery,cmk.gui.watolib.main_menu,cmk.gui.watolib.network_scan,cmk.notification_plugins.*,cmk.update_config.*,cmk.utils.crypto.*,tests.gui_e2e.*,tests.testlib.*,tests.unit.cmk.ec.*,tests.unit.cmk.update_config.*]
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 warn_return_any = true
