CMK-25734: ConfigAnonymizer: Initial version
Change-Id: Iabce61f5225ba7e2e1feb6b61468bc1090363a39

--- a/bin/BUILD
+++ b/bin/BUILD
@@ -54,6 +54,7 @@ pkg_files(
         ":cmk-automation-helper",
         ":cmk-broker-test",
         ":cmk-cert",
+        ":cmk-config-anonymizer.py",
         ":cmk-convert-rrds",
         ":cmk-create-rrd",
         ":cmk-general-version-infos",
@@ -93,6 +94,9 @@ pkg_files(
         mode = "0755",
     ),
     prefix = "bin",
+    renames = {
+        ":cmk-config-anonymizer.py": "cmk-config-anonymizer",
+    },
 )
 
 pkg_tar(
