Update gcc warnings
 * remove obsolete warnings
 * add newly required ones

CMK-26164

Change-Id: If3f96466e4598495f4649dd7193e168dd997abc6

--- a/packages/livestatus/CMakeLists.txt
+++ b/packages/livestatus/CMakeLists.txt
@@ -13,6 +13,7 @@ add_compile_options(
   -Wall
   -Wextra
   -Werror
+  -Wno-deprecated-declarations
   -DHAVE_RE2
   -DASIO_DISABLE_CONCEPTS
   -DASIO_NO_DEPRECATED
