--- a/omd/packages/libgsf/BUILD.libgsf.bazel
+++ b/omd/packages/libgsf/BUILD.libgsf.bazel
@@ -11,6 +11,7 @@ filegroup(
 configure_make(
     name = "libgsf",
     args = ["-j4"],
+    copts = ["-Wno-incompatible-pointer-types"],
     lib_source = ":all_srcs",
     out_binaries = [
         "gsf",
