--- a/omd/packages/nagios/BUILD.nagios.bazel
+++ b/omd/packages/nagios/BUILD.nagios.bazel
@@ -18,7 +18,10 @@ configure_make(
         "--with-perlcache",
         "--enable-embedded-perl",
     ],
-    copts = ["-Wl,--rpath,$ORIGIN_VAR/../lib"],
+    copts = [
+        "-Wl,--rpath,$ORIGIN_VAR/../lib",
+        "-Wno-implicit-int",
+    ],
     env = {"ORIGIN_VAR": "\\\\$$\\$$ORIGIN"},
     lib_source = ":all_srcs",
     out_binaries = [
