implemented CheckmkTarArchive to securely handle tarfile extractions
Change-Id: I2564d72320d80d179619542a69d471b7aa70c8b8

--- a/cmk/BUILD
+++ b/cmk/BUILD
@@ -201,6 +201,7 @@ CMK_PACKAGES = [
     "//packages/cmk-ccc:timeout",
     "//packages/cmk-ccc:tty",
     "//packages/cmk-ccc:user",
+    "//packages/cmk-ccc:archive",
     "//packages/cmk-ccc:version",
     "//packages/cmk-check-engine:fetchers",
     "//packages/cmk-check-engine:helper-interface",
