implement automatic workflow for site-ca certificates rotation
CMK-26077

Change-Id: Iad1c12e1dfc23fb99b11d76752a408bfb1393d62

--- a/bin/BUILD
+++ b/bin/BUILD
@@ -80,6 +80,7 @@ pkg_files(
         ":cmk-validate-plugins",
         ":init-redis",
         ":livedump",
+        ":message-broker-certs",
         ":mkbackup",
         ":mkevent",
         ":mkeventd",
