Add demo/public assets to data for ibazel mock server
Service Worker Failed to register from mockServiceWorker.js.
Adding this ensures the msw file is available at the expected url

Change-Id: Ic988d21166f83e0ae203e94b29a6f67d0903f69b

--- a/packages/cmk-frontend-vue/BUILD
+++ b/packages/cmk-frontend-vue/BUILD
@@ -157,6 +157,7 @@ SRCS = [
     "demo/**/*.ts",
     "demo/**/*.vue",
     "demo/**/*.css",
+    "demo/public/*",
 ])
 
 SRCS_AND_TESTS = SRCS + glob([
