--- a/editions.yml
+++ b/editions.yml
@@ -3,6 +3,7 @@ common: &common
     - "debian-10"
     - "debian-11"
     - "debian-12"
+    - "debian-13"
     - "ubuntu-20.04"
     - "ubuntu-22.04"
     - "ubuntu-24.04"
