--- a/editions.yml
+++ b/editions.yml
@@ -2,6 +2,7 @@
 common: &common
     - "debian-11"
     - "debian-12"
+    - "debian-13"
     - "ubuntu-22.04"
     - "ubuntu-24.04"
     - "almalinux-8"
