--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ ignore = [
   "SLF001",
 ]
 "packages/cmk-trace/cmk/trace/__init__.py" = ["A005"]
+"packages/cmk-plugins/*" = ["ARG001", "ARG002"]
 "non-free/packages/cmk-mknotifyd/*" = ["ARG001", "ARG002", "SLF001"]
 "tests/*" = ["A002", "ARG001", "ARG002", "ARG003", "ARG004", "ARG005", "SLF001"]
 "agents/*" = ["ARG001", "ARG002", "SLF001"]
