feat(shared-typing) add ai_button.json
Change-Id: I64a3c40d0dd220bfc1c5cf5e83dd17b4a589b92f

--- a/packages/cmk-shared-typing/BUILD
+++ b/packages/cmk-shared-typing/BUILD
@@ -15,6 +15,7 @@ exports_files(["package.json"])
 npm_link_all_packages(name = "node_modules")
 
 SOURCES_COMMON = [
+    "ai_button.json",
     "configuration_entity.json",
     "main_menu.json",
     "mode_host.json",
