Remove usage of egrep due to warning in RHEL 10
In RHEL 10 calling `egrep` directly prints the following warning to
standard error and for some processes this can cause problems.

`egrep: warning: egrep is obsolescent; using grep -E`

Since `egrep` is equivalent to `grep -E`, we should just use that
everywhere instead to be consistent.

Change-Id: I64ac7862fdd8d4e555074f1618b9c767fc5eec07

--- a/omd/debian/postrm.in
+++ b/omd/debian/postrm.in
@@ -35,7 +35,7 @@ case "$1" in
     ;;
 
     purge)
-      ALTERNATIVES=`update-alternatives --list omd 2>/dev/null | egrep -v 'No alternatives'` || /bin/true
+      ALTERNATIVES=`update-alternatives --list omd 2>/dev/null | grep -E -v 'No alternatives'` || /bin/true
       if [ -z "$ALTERNATIVES" ]; then
 	  echo "Removing system group 'omd'"
 	  groupdel omd || true
