--- a/packages/cmk-plugins/BUILD
+++ b/packages/cmk-plugins/BUILD
@@ -11,7 +11,7 @@ exports_files([
 ])
 
 py_library(
-    name = "lib",
+    name = "plugins-lib",
     srcs = [
         "cmk/plugins/lib/cache_helper.py",
         "cmk/plugins/lib/container_cgroupv2.py",
@@ -60,7 +60,9 @@ py_library(
 py_doc_test(
     name = "doctest",
     size = "small",
-    srcs = [":lib"],
+    srcs = [
+        "plugins-lib",
+    ],
     tags = ["no-mypy"],
 )
 
@@ -72,13 +74,13 @@ py_pytest_main(
 )
 
 py_test(
-    name = "lib-test",
+    name = "plugins-lib-test",
     size = "small",
     srcs = glob(["tests/cmk/plugins/lib/**/*.py"]) + [":__test__.py"],
     main = ":__test__.py",
     deps = [
         ":__test__",
-        ":lib",
+        ":plugins-lib",
         requirement("pytest"),
         requirement("time-machine"),
     ],
@@ -91,7 +93,7 @@ py_wheel(
     # TODO: Duplicated from pyproject.toml
     version = "1.0.0",
     deps = [
-        ":lib",
+        ":plugins-lib",
     ],
 )
 
