Reapply "introduce cmk-plugins package"
This reverts commit eb84ea05163b98fc86cfd2727908c27a7eb4f67e.

Change-Id: I9596bc2433046d656485e539c488cd0574855e1b

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -188,6 +188,7 @@ pkg_files(
                "//packages/cmk-livestatus-client:cmk_livestatus_pkg_tar",
                "//packages/cmk-messaging:pkg_tar",
                "//packages/cmk-mkp-tool:pkg_tar",
+               "//packages/cmk-plugins:pkg_tar",
                "//packages/cmk-plugin-apis:pkg_tar",
                "//packages/cmk-relay-protocols:pkg_tar",
                "//packages/cmk-trace:pkg_tar",
