Add two templates  for loading transition
The final UX is still tbd

CMK-25990

Change-Id: Id9350a803a20018cad2bdf2cc60150d024524fa8

--- a/packages/cmk-shared-typing/BUILD
+++ b/packages/cmk-shared-typing/BUILD
@@ -17,6 +17,7 @@ npm_link_all_packages(name = "node_modules")
 SOURCES_COMMON = [
     "ai_button.json",
     "configuration_entity.json",
+    "loading_transition.json",
     "main_menu.json",
     "mode_host.json",
     "notifications.json",
