feat(ai) add AI conversation markdown content
Change-Id: Ie5ae3162d2a17e372aee1c310db6a0a62ff5b3ed

--- a/packages/cmk-frontend-vue/BUILD
+++ b/packages/cmk-frontend-vue/BUILD
@@ -140,6 +140,7 @@ SRCS = [
     ":node_modules/cmk-shared-typing-bzl",
     ":node_modules/grid-layout-plus",
     ":node_modules/lucide-vue-next",
+    ":node_modules/marked",
     ":node_modules/msw",
     ":node_modules/openapi-fetch",
     ":node_modules/radix-vue",
