--- a/omd/BUILD
+++ b/omd/BUILD
@@ -142,6 +142,7 @@ pkg_files(
                "//bin:pkg_tar",
                "//active_checks:pkg_tar",
                "//doc/plugin-api:pkg_tar",
+               "//cmk:legacy_checks",
                "//locale",
                #added here instead of above because of disappearing file
                "//omd/packages/Python:python_tar",
