Deploy notifications via bazel
CMK-26879

Change-Id: I7bf35ff2fd5268d3a90c8a50f178e8f05c543575

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -144,6 +144,7 @@ pkg_files(
                "//doc/plugin-api:pkg_tar",
                "//cmk:legacy_checks",
                "//locale",
+               "//notifications",
                #added here instead of above because of disappearing file
                "//omd/packages/Python:python_tar",
                "//omd/packages/changelog",
