Deploy Plugin namespaces and post scripts in bazel
CMK-24374

Change-Id: I48a28094ab5fbe4f848d0dec963c9ed99232cfaa

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -149,6 +149,7 @@ pkg_files(
                "//omd/packages/Python:python_tar",
                "//omd/packages/changelog",
                "//omd/packages/check-cert",
+               "//omd/packages/check_mk",
                "//omd/packages/cpp-libs",
                "//omd/packages/erlang",
                "//omd/packages/heirloom-mailx",
