Bazelize //agents/plugins
CMK-26879

Change-Id: I6f0158791e4ad6f3cd836a1210af68b021b40047

--- a/agents/plugins/BUILD
+++ b/agents/plugins/BUILD
@@ -1,6 +1,19 @@
 load("@aspect_rules_py//py:defs.bzl", "py_binary")
 load("@cmk_requirements//:requirements.bzl", "requirement")
 
+filegroup(
+    name = "srcs",
+    srcs = glob(
+        include = ["*"],
+        exclude = [
+            "__init__.py",
+            "BUILD",
+            "Makefile",
+        ],
+    ),
+    visibility = ["//visibility:public"],
+)
+
 py_binary(
     # Shares code with `agent_jolokia` in the site.
     name = "mk_jolokia",
