--- a/omd/BUILD
+++ b/omd/BUILD
@@ -134,11 +134,18 @@ pkg_files(
     prefix = "share/check_mk/agents/cfg_examples",
 )
 
+pkg_files(
+    name = "agents_plugins",
+    srcs = ["//agents/plugins:srcs"],
+    prefix = "share/check_mk/agents/plugins",
+)
+
 [pkg_tar(
     name = "deps_install_" + edition,
     srcs = [
         ":agents",
         ":agents_cfg_examples",
+        ":agents_plugins",
         ":diskspace_cleanup_plugin",
         ":omd_hooks",
         ":rest_api_spec",
